--- a/docs/styles-index.css
+++ b/docs/styles-index.css
@@ -52,7 +52,7 @@
     width: 100%;
     height: 100vh; 
     background: 
-      url(../../images/image-parral.jpg) 
+      url(image-parral.jpg) 
       no-repeat center center/cover;
     display: flex;
     flex-direction: column;
